# manole

./: .gitignore  README.md  agent.py  benchmark_extractors.py  caption_cache.py  chat.py  file_reader.py  graph.py  image_captioner.py  indexer.py  main.py  mapper.py  models-manifest.json  models.py  parser.py  pipeline.py  planner.py  preprocess.py  prototype.py  prototype_chat.py  pyproject.toml  reducer.py  rewriter.py  router.py  run.sh  searcher.py  server.py  server.spec  toolbox.py  tools.py
.claude/: settings.local.json
.github/workflows/: build.yml  pages.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: architecture.md  lessons-learned.md
docs/analysis/: 2026-02-17-lfm2-vl-captioning-failure.md  root-cause-analysis-image-search.md  (+1 more)
site/: index.html
tests/: CLAUDE.md  conftest.py  helpers.py  test_agent.py  test_agentic_rag.py  test_benchmark_extractors.py  test_build_config.py  test_caption_cache.py  test_chat.py  test_conversation_memory.py  test_file_reader.py  test_graph.py  test_image_captioner.py  test_indexer.py  test_indexer_integration.py  test_integration.py  test_mapper.py  test_models.py  test_parser.py  test_pipeline.py  test_planner.py  test_reducer.py  test_rewriter.py  test_router.py  test_searcher.py  test_server.py  test_toolbox.py  test_tools.py  test_vision_models.py  test_watcher.py
ui/: components.json  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
(+92 files in other folders)
