[project]
name = "manole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.70",
    "leann>=0.3.6",
    "llama-cpp-python>=0.3.0",
    "torchvision>=0.25.0",
    "transformers>=4.55",
]

[tool.uv]
constraint-dependencies = []
override-dependencies = [
    "transformers>=4.55",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
